tests/failing/residue.tail
let v3:[int]1 = zipWith{[int,int,int],[1]}(resi,[3,~5,6,~3],[29,43,~14,~14]) in
let v4:[int]1 = prArrI(v3) in
let v7:[int]0 = reduce{[int],[0]}(addi,0,v3) in
i2d(v7)
